// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-limit-elements 1 element, limit of 2 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
  </ul>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-limit-elements 2 elements, limit of 2 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
  </ul>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-limit-elements 3 elements, limit of 2 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
    <li>
      Element 3
    </li>
  </ul>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-limit-elements 4 elements, limit of 2 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher 2 de plus
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements 5 elements, limit of 2 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher 3 de plus
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements Slot element 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      <div
        class="m-message m--is-state-confirmation m--is-skin-default"
        style="margin-top: 4px;"
      >
        <div
          class="m-message__wrap"
        >
          <div
            class="m-message__icon"
          >
            <svg
              aria-hidden="true"
              class="m-icon"
              height="1em"
              width="1em"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
          </div>
           
          <div
            class="m-message__body"
          >
            <!---->
             
            <div
              class="m-message__text"
            >
              id: id1 ­~ texte: texte1 ­~ index: 0
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </li>
    <li>
      <div
        class="m-message m--is-state-confirmation m--is-skin-default"
        style="margin-top: 4px;"
      >
        <div
          class="m-message__wrap"
        >
          <div
            class="m-message__icon"
          >
            <svg
              aria-hidden="true"
              class="m-icon"
              height="1em"
              width="1em"
            >
              <!---->
               
              <use
                aria-hidden="true"
                class=""
              />
            </svg>
          </div>
           
          <div
            class="m-message__body"
          >
            <!---->
             
            <div
              class="m-message__text"
            >
              id: id2 ­~ texte: texte2 ­~ index: 1
            </div>
          </div>
           
          <!---->
        </div>
      </div>
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher 3 de plus
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements open sync 1`] = `
<div>
  <button
    class="m-button m--is-skin-primary"
    type="button"
  >
    <!---->
     
    <!---->
     
    <span
      class="m-button__text"
    >
      Toggle open 
      <!---->
    </span>
     
    <!---->
     
    <!---->
  </button>
   
  <div
    class="m-limit-elements"
  >
    <ul
      class="m-limit-elements__list"
    >
      <li>
        Element 1
      </li>
      <li>
        Element 2
      </li>
    </ul>
     
    <a
      class="m-link m--is-unvisited m--is-button m--has-content"
      href="#"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="m-link__text"
      >
        Afficher 3 de plus
      </span>
       
      <!---->
    </a>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/closeLabel="Custom close" default 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
    <li>
      Element 3
    </li>
    <li>
      Element 4
    </li>
    <li>
      Element 5
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Custom close
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/limit="2" default 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher 3 de plus
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/limit="2" limit of 3 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
    <li>
      Element 3
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher 2 de plus
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/limit="2" limit of 4 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
    <li>
      Element 3
    </li>
    <li>
      Element 4
    </li>
    <li>
      Element 5
    </li>
  </ul>
   
  <!---->
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/open="false" default 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher 3 de plus
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/open="false" true 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
    <li>
      Element 3
    </li>
    <li>
      Element 4
    </li>
    <li>
      Element 5
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Afficher moins
    </span>
     
    <!---->
  </a>
</div>
`;

exports[`Storyshots modul-components|m-limit-elements/openLabel="Custom show more" default 1`] = `
<div
  class="m-limit-elements"
>
  <ul
    class="m-limit-elements__list"
  >
    <li>
      Element 1
    </li>
    <li>
      Element 2
    </li>
  </ul>
   
  <a
    class="m-link m--is-unvisited m--is-button m--has-content"
    href="#"
    role="button"
    tabindex="0"
  >
    <!---->
     
    <span
      class="m-link__text"
    >
      Custom show more
    </span>
     
    <!---->
  </a>
</div>
`;
